# w_11

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/versions/: 46498f9d326d_birthday_contacts.py  7d6f9f30202f_init.py  884844bdd044_field_avatar_added_to_user_profile.py  d0032c53f1b4_contact_with_connected_user.py  ebdea57f9122_user_model_added.py  f9dd2cde8c66_datatime.py  fb8720d34823_confirmed_field_added_to_user_model.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2696  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16399  16402  16404  16415  16416  16422  16424  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: auth.py  db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: email.py
tests/: test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
