[tool.poetry]
name = "w-11"
version = "0.1.0"
description = ""
authors = ["juliabulanaja <bulanaja.julia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.8"
alembic = "^1.12.0"
python-jose = "^3.3.0"
fastapi-jwt-auth = "^0.5.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.5"
pydantic-settings = "^2.0.3"
cloudinary = "^1.36.0"
libgravatar = "^1.0.4"
sphinx = "^7.2.6"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
